Fix word wrap

--- a/data/main.css
+++ b/data/main.css
@@ -1,3 +1,7 @@
+body {
+    word-wrap: break-word;
+}
+
 .footer {
     position: fixed;
     left: 0;
